proje tamamlandı.
