# backend/routes/applicationRoutes.js
@@ -3,13 +3,13 @@
 const express = require('express');
 const router = express.Router();
 const controller = require('../controllers/applicationController');
-
+const verifyToken = require('../middlewares/authMiddleware');
 // Hoca Kuralı: Standart HTTP metotları kullanılmalıdır[span_3](end_span).
 // Bu rotalar, az önce yazdığımız controller fonksiyonlarını tetikler.
 
-router.post('/', controller.createApplication);       
-router.get('/', controller.getApplications);          
-router.put('/:id', controller.updateApplication);     
-router.delete('/:id', controller.deleteApplication);  
+router.post('/',verifyToken, controller.createApplication);       
+router.get('/',verifyToken, controller.getApplications);          
+router.put('/:id',verifyToken, controller.updateApplication);     
+router.delete('/:id',verifyToken, controller.deleteApplication);  
 
 module.exports = router;
